<resources>
    <string name="app_name">apollo</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="events">Events</string>
    <string name="export_as_csv">Export as CSV</string>
    <string name="filter">Filter</string>
    <string name="entrants_in_waitlist">Entrants In Waitlist</string>
    <string name="filter_button">filter button</string>
    <string name="empty">empty</string>
    <string name="title_events">Events</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">Profile picture</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="upcoming">Upcoming</string>
    <string name="waitlisted">Waitlisted</string>
    <string name="history">History</string>
    <string name="swimming">Swimming</string>
    <string name="group_activity">Group activity</string>
    <string name="_18">18+</string>
    <string name="add_new_event">ADD NEW EVENT</string>
    <string name="event_title">Event Title</string>
    <string name="event_image_preview">Event image preview</string>
    <string name="cd_lottery_info">How the lottery works</string>
    <string name="event_poster">Event Poster</string>
    <string name="back_button_desc">Back</string>
    <string name="event_title_placeholder">Event Title Here</string>
    <string name="event_description_placeholder">Event description goes here...</string>
    <string name="sign_up_label">Sign UP</string>
    <string name="edit_event_button">Edit Event</string>
    <string name="send_lottery_button">Send Lottery</string>
    <string name="view_entrants_button">View Entrants</string>
    <string name="images">Images</string>
    <string name="profiles">Profiles</string>
</resources>