<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.entrant.profile.ProfileFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/profile_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btnSettings,avatarContainer,tvName,sectionEvents,listContainer" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />

    <!-- settings icon -->
    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:contentDescription="@string/settings"
        app:tint="#000000"
        app:srcCompat="@drawable/ic_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- avatar icon and edit icon -->
    <FrameLayout
        android:id="@+id/avatarContainer"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@drawable/avatar"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/ic_person" />

        <ImageButton
            android:id="@+id/btnChangePhoto"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="4dp"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/change_profile_picture"
            app:tint="#000000"
            app:srcCompat="@drawable/ic_edit" />
    </FrameLayout>

    <!-- users name-->
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="name"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/avatarContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <!-- Events section-->
    <TextView
        android:id="@+id/sectionEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/events"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <LinearLayout
        android:id="@+id/listContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/sectionEvents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/rowUpcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/account_card"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="64dp"
            android:paddingHorizontal="16dp"
            android:text="@string/upcoming"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rowWaitlisted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/account_card"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="64dp"
            android:paddingHorizontal="16dp"
            android:text="@string/waitlisted"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rowHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="64dp"
            android:background="@drawable/account_card"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:text="@string/history"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>