<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="648dp"
        android:background="@color/white"
        android:fillViewport="true"
        android:paddingBottom="80dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingTop="32dp">


            <!-- Card container (rounded background of the event) -->

            <LinearLayout
                android:id="@+id/eventCard"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@drawable/event_card_background"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.76">

                <ImageView
                    android:id="@+id/eventPosterImage"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:background="@color/black"
                    android:contentDescription="@string/event_poster"
                    android:scaleType="centerCrop"
                    tools:layout_editor_absoluteX="-8dp"
                    tools:layout_editor_absoluteY="68dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/textEventTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Event Title"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/qrButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/qrcode" />
                </LinearLayout>

                <!-- Event description -->
                <TextView
                    android:id="@+id/textEventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/event_description_placeholder"
                    android:textColor="#444444"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/sign_up_label"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!-- Event summary details -->
                <TextView
                    android:id="@+id/textEventSummary"
                    android:layout_width="326dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:lineSpacingExtra="4dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventCard"
                app:layout_constraintVertical_bias="0.846">

                <Button
                    android:id="@+id/buttonEditEvent"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="center"
                    android:text="@string/edit_event_button"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonSendLottery"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="center"
                    android:text="@string/send_lottery_button"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonViewParticipants"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="center"
                    android:text="@string/view_entrants_button"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonDeleteEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="648dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/apollo_red"
        android:text="DELETE"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

</RelativeLayout>
